# OSH-2019-Labs

./: README.md
docs/: lab1-1.md  lab1-3.md
files/: kernel7.img
lab1/docs/: lab1-1.md  lab1-2.md
lab1/files/: led.s
lab2/: Makefile  README.md
lab2/src/: Makefile  build.sh  executor.cpp  executor.hpp  pt.cpp  pt.hpp  shell  shell.cpp  yash.l  yash.y
lab3/docs/: lab3.md
lab3/files/: CMakeLists.txt  libsock.c  libsock.h  main.c  server.c  test_script.sh
